<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterForm">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/back_register_icon"
            android:layout_width="43dp"
            android:layout_height="38dp"
            android:layout_marginTop="30dp"
            android:onClick="back_arrow_register"
            android:src="@drawable/left_arrow_icon"
            app:layout_constraintBottom_toTopOf="@id/text_register_form"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </androidx.constraintlayout.utils.widget.ImageFilterView>

        <TextView
            android:id="@+id/text_register_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_acc"
            android:textColor="#005F40"
            android:layout_marginTop="50dp"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/email_register_form"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_register_icon"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:padding="16dp"
            android:hint="@string/email_regis"
            app:startIconDrawable="@drawable/email_icon"
            app:hintTextColor="@color/black"
            android:textColor="@color/black"
            app:boxStrokeColor="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintBottom_toTopOf="@id/password_register_form"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_register_form">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="20sp">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:endIconMode="password_toggle"
            android:hint="@string/password_regis"
            app:startIconDrawable="@drawable/password_icon"
            app:hintTextColor="@color/black"
            android:textColor="@color/black"
            app:boxStrokeColor="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_register_form"
            app:layout_constraintBottom_toTopOf="@id/radioButton">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="20sp">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_register_form"
            app:layout_constraintBottom_toTopOf="@id/signUpRegister">
            <RadioButton
                android:id="@+id/radio_button_left_register"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:textColor="@drawable/radio_button_text"
                android:text="@string/user"
                android:gravity="center"
                android:button="@android:color/transparent"
                android:layout_weight="1"
                android:background="@drawable/radio_button_selector"/>
            <RadioButton
                android:id="@+id/radio_button_center_register"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:textColor="@drawable/radio_button_text"
                android:text="@string/driver"
                android:gravity="center"
                android:button="@android:color/transparent"
                android:layout_weight="1"
                android:layout_marginLeft="-1dp"
                android:layout_marginRight="-1dp"
                android:background="@drawable/radio_button_selector"/>
            <RadioButton
                android:id="@+id/radio_button_right_register"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:textColor="@drawable/radio_button_text"
                android:text="@string/employee"
                android:gravity="center"
                android:button="@android:color/transparent"
                android:layout_weight="1"
                android:background="@drawable/radio_button_selector"/>
        </RadioGroup>

        <Button
            android:id="@+id/signUpRegister"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:background="@drawable/main_button"
            android:text="@string/signup"
            android:textColor="#fff"
            android:textSize="30sp"
            app:backgroundTint="@color/dark_green"
            app:layout_constraintBottom_toTopOf="@id/register_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioButton" />

        <TableRow
            android:id="@+id/register_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpRegister">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Already have an account?"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/login_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/login_regis"
                android:textColor="@color/dark_green"
                android:textSize="18sp"
                android:textStyle="bold"
                android:onClick="login_register_txt"
                />
        </TableRow>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>