<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeProfileViewFormAccount">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:id="@+id/account_emplo_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/profilee"
                android:textAlignment="center"
                android:onClick="profile_text_emplo"
                android:textColor="@color/light_gray"
                android:textSize="50sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/accountprofile"
                android:textColor="@color/dark_green"
                android:textSize="50sp" />
        </TableRow>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_account_form_emplo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/email"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:enabled="false"
            android:textColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_emplo_tab"
            app:layout_constraintBottom_toTopOf="@id/password_account_form_emplo"
            app:startIconDrawable="@drawable/email_icon">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_account_form_text_driver_emplo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="20sp">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_account_form_emplo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:enabled="false"
            android:textColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@id/update_account_button_emplo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_account_form_emplo"
            app:startIconDrawable="@drawable/password_icon">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_account_form_text_driver_emplo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="20sp">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/update_account_button_emplo"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:background="@drawable/main_button"
            android:text="Edit"
            android:textColor="#fff"
            android:onClick="edit_account_emplo"
            android:textSize="30sp"
            app:backgroundTint="@color/dark_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_account_form_emplo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>